<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3C4043"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_expression"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/tv_expression_text"
            android:textColor="@color/white"
            android:textSize="45sp"
            tools:text="32+5" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/grey"
            android:textSize="35sp"
            tools:text="= 37" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:background="@drawable/rectangle"
            app:menu="@menu/overflow_menu">

            <androidx.cardview.widget.CardView
                android:backgroundTint="@color/random"
                android:id="@+id/cv_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cv_constraint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:layout_marginBottom="5dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_sin"
                        style="@style/circle_button"
                        android:text="sin"
                        android:textAllCaps="false"
                        android:textColor="@color/green"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/bt_cos"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_cos"
                        style="@style/circle_button"
                        android:text="cos"
                        android:textAllCaps="false"
                        android:textColor="@color/green"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/bt_sin"
                        app:layout_constraintEnd_toStartOf="@+id/bt_square_root"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/bt_sin"
                        app:layout_constraintTop_toTopOf="@+id/bt_sin" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_square_root"
                        style="@style/circle_button"
                        android:text="√ "
                        android:textAllCaps="false"
                        android:textColor="@color/green"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/bt_cos"
                        app:layout_constraintEnd_toStartOf="@+id/bt_power"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/bt_cos"
                        app:layout_constraintTop_toTopOf="@+id/bt_cos" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_power"
                        style="@style/circle_button"
                        android:text=" x²"
                        android:textAllCaps="false"
                        android:textColor="@color/green"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/bt_square_root"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/bt_square_root"
                        app:layout_constraintTop_toTopOf="@+id/bt_square_root" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_decimal"
                style="@style/circle_button"
                android:layout_marginBottom="10dp"
                android:text="@string/bt_decimal_text"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="@+id/bt_zero"
                app:layout_constraintStart_toStartOf="@+id/bt_one"
                app:layout_constraintTop_toTopOf="@+id/bt_zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_clear"
                style="@style/circle_button"
                android:layout_marginBottom="10dp"
                android:text="@string/tv_clear_text"
                android:textColor="@color/green"
                app:layout_constraintBottom_toTopOf="@+id/bt_seven"
                app:layout_constraintEnd_toStartOf="@+id/bt_erase"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cv_main"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_seven"
                style="@style/circle_button"
                android:layout_marginBottom="10dp"
                android:text="@string/bt_seven_text"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toTopOf="@+id/bt_four"
                app:layout_constraintEnd_toStartOf="@+id/bt_eight"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_clear" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_eight"
                style="@style/circle_button"
                android:text="@string/bt_eight_text"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="@+id/bt_seven"
                app:layout_constraintEnd_toStartOf="@+id/bt_nine"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_seven"
                app:layout_constraintTop_toTopOf="@+id/bt_seven"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_nine"
                style="@style/circle_button"
                android:text="@string/bt_nine_text"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="@+id/bt_eight"
                app:layout_constraintEnd_toStartOf="@+id/bt_multiply"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_eight"
                app:layout_constraintTop_toTopOf="@+id/bt_eight"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_multiply"
                style="@style/circle_button"
                android:contentDescription="@string/bt_multiply_text"
                android:text="×"
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/bt_nine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_nine"
                app:layout_constraintTop_toTopOf="@+id/bt_nine"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_four"
                style="@style/circle_button"
                android:layout_marginBottom="10dp"
                android:text="@string/bt_four_text"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toTopOf="@+id/bt_one"
                app:layout_constraintEnd_toStartOf="@+id/bt_five"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_seven" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_one"
                style="@style/circle_button"
                android:layout_marginBottom="10dp"
                android:text="@string/bt_one_text"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toTopOf="@+id/bt_decimal"
                app:layout_constraintEnd_toStartOf="@+id/bt_two"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_zero"
                style="@style/circle_button"
                android:layout_marginBottom="10dp"
                android:text="@string/bt_zero_text"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="@+id/bt_equals"
                app:layout_constraintStart_toStartOf="@+id/bt_two"
                app:layout_constraintTop_toTopOf="@+id/bt_equals" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_erase"
                style="@style/circle_button"
                android:text="←"
                android:textColor="@color/green"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/bt_clear"
                app:layout_constraintEnd_toStartOf="@+id/bt_percentage"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_clear"
                app:layout_constraintTop_toTopOf="@+id/bt_clear" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_five"
                style="@style/circle_button"
                android:text="@string/bt_five_text"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="@+id/bt_four"
                app:layout_constraintEnd_toStartOf="@+id/bt_six"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_four"
                app:layout_constraintTop_toTopOf="@+id/bt_four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_two"
                style="@style/circle_button"
                android:text="@string/bt_two_text"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="@+id/bt_one"
                app:layout_constraintEnd_toStartOf="@+id/bt_three"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_one"
                app:layout_constraintTop_toTopOf="@+id/bt_one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_percentage"
                style="@style/circle_button"
                android:contentDescription="@string/bt_percentage_text"
                android:text="%"
                android:textColor="@color/green"
                app:layout_constraintBottom_toBottomOf="@+id/bt_erase"
                app:layout_constraintEnd_toStartOf="@+id/bt_divide"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_erase"
                app:layout_constraintTop_toTopOf="@+id/bt_erase" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_three"
                style="@style/circle_button"
                android:text="@string/bt_three_text"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="@+id/bt_two"
                app:layout_constraintEnd_toStartOf="@+id/bt_plus"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_two"
                app:layout_constraintTop_toTopOf="@+id/bt_two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_six"
                style="@style/circle_button"
                android:text="@string/bt_six_text"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="@+id/bt_five"
                app:layout_constraintEnd_toStartOf="@+id/bt_minus"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_five"
                app:layout_constraintTop_toTopOf="@+id/bt_five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_plus"
                style="@style/circle_button"
                android:text="@string/bt_plus_text"
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/bt_three"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_three"
                app:layout_constraintTop_toTopOf="@+id/bt_three" />

            <Button
                android:id="@+id/bt_equals"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/grey_dark"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/bt_equals_text"
                android:textAlignment="center"
                android:textColor="@color/light_white"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/bt_plus"
                app:layout_constraintTop_toBottomOf="@+id/bt_plus" />

            <Button
                android:id="@+id/bt_expand"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/grey_dark"
                android:fontFamily="@font/ubuntu_medium"
                android:text="⟳"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/light_white"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/bt_three"
                app:layout_constraintStart_toStartOf="@+id/bt_three"
                app:layout_constraintTop_toBottomOf="@+id/bt_three"
                app:layout_constraintVertical_bias="0.53" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_divide"
                style="@style/circle_button"
                android:contentDescription="@string/bt_divide_text"
                android:text="÷"
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/bt_percentage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bt_percentage"
                app:layout_constraintTop_toTopOf="@+id/bt_percentage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_minus"
                style="@style/circle_button"
                android:text="@string/bt_minus_text"
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/bt_six"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_six"
                app:layout_constraintTop_toTopOf="@+id/bt_six" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>